--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.7.9",
     "framer-motion": "^12.23.16",
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
